# Client

./: .gitignore  CMakeLists.txt
include/: EncoderDecoder.h  connectionHandler.h
src/: EncoderDecoder.cpp  client.cpp  connectionHandler.cpp
